<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_artists"
    style="@style/layout"
    tools:context="com.example.android.musicalstructureapp.Artists">
    <LinearLayout
        style="@style/layout">

        <TextView
            style="@style/description"
            android:text="@string/description_artists"/>

        <TextView
            android:id="@+id/artist_a"
            style="@style/category_1"
            android:background="@color/artists"
            android:text="@string/artist_a"/>

        <TextView
            android:id="@+id/artist_b"
            style="@style/category_1"
            android:background="@color/artists"
            android:text="@string/artist_b"/>

        <Button
            android:id="@+id/artist_add"
            style="@style/category_1"
            android:background="@color/artists"
            android:text="@string/artist_add"/>

        <ImageView
            android:src="@drawable/image"
            style="@style/image"/>

    </LinearLayout>
</ScrollView>
