<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_albums"
    style="@style/layout"
    tools:context="com.example.android.musicalstructureapp.Albums">
    <LinearLayout
        style="@style/layout">

        <TextView
            style="@style/description"
            android:text="@string/description_albums"
            />

        <TextView
            android:id="@+id/album_a"
            style="@style/category_1"
            android:background="@color/albums"
            android:text="@string/album_a"/>

        <TextView
            android:id="@+id/album_b"
            style="@style/category_1"
            android:background="@color/albums"
            android:text="@string/album_b"/>

        <Button
            android:id="@+id/album_add"
            style="@style/category_1"
            android:background="@color/albums"
            android:text="@string/album_add"/>

        <ImageView
            android:src="@drawable/image"
            style="@style/image"/>

    </LinearLayout>
</ScrollView>
