<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_playlists"
    style="@style/layout"
    tools:context="com.example.android.musicalstructureapp.Playlists">

    <LinearLayout
        style="@style/layout">

        <TextView
            style="@style/description"
            android:text="@string/description_genres"/>

        <TextView
            android:id="@+id/playlist_a"
            style="@style/category_1"
            android:background="@color/playlists"
            android:text="@string/playlist_a"/>

        <TextView
            android:id="@+id/playlist_b"
            style="@style/category_1"
            android:background="@color/playlists"
            android:text="@string/playlist_b"/>

        <Button
            android:id="@+id/playlist_c"
            style="@style/category_1"
            android:background="@color/playlists"
            android:text="@string/playlist_add"/>

        <ImageView
            android:src="@drawable/image"
            style="@style/image"/>

    </LinearLayout>
</ScrollView>
